enviroments-aks/deploy_backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: brandon2399/repo_samples_dockerhub_backend:latest
        ports:
        - containerPort: 3000
      - name: mongo
        image: mongo:4.2.0
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
