enviroments-aks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      # - path: /api
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: backend
      #       port:
      #         name: http
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              name: http
